--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -34,13 +34,13 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 This work is published in the journal Platelets[@Goudswaard2022]. I performed all analyses, created all figures and tables and wrote the manuscript. 
 
 ## Background
-The introduction chapter (Chapter \@ref(background)) indicated that clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders such as CHD and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis[@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets[@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Platelet function can be directly assessed by various methods (section \@ref(platelet-function-techniques), but these techniques are not widely available or readily standardized. Haematology analyzers such as the Sysmex XN series are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Mechanisms of platelet hyperactivity are unclear, but it is possible that alterations in properties of platelets such as PLT, MPV and IPF/IPC may contribute to the phenotype. 
+The introduction chapter (Chapter \@ref(background)) indicated that clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders such as CHD and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis[@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets[@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Platelet function can be directly assessed by various methods (section \@ref(platelet-function-techniques)), but these techniques are not widely available or readily standardized. Haematology analyzers such as the Sysmex XN series are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Mechanisms of platelet hyperactivity are unclear, but it is possible that alterations in properties of platelets such as PLT, MPV and IPF/IPC may contribute to the phenotype. 
 
 Immature platelets (also known as reticulated platelets) are the youngest platelets in circulation and are detected based on having a greater forward scatter (FSC, an indicator of their size) and a greater side fluorescence (SFL, an indicator of their mRNA content)[@Ibrahim2014]. More immature platelets are indicative of enhanced platelet production[@Lev2016a] and these platelets are believed to be more prothrombotic than older circulating platelets, with more dense granule release and increased P-selectin expression[@Ibrahim2014; @Lev2016a; @Bernlochner2015a]. Higher immature platelet count is associated with adverse cardiovascular outcomes in patients with coronary artery disease[@Ibrahim2014] and reduced effectiveness of antiplatelet therapies[@Bernlochner2015a; @Ibrahim2012], suggesting that hyperactive immature platelets may contribute to adverse vascular events. Immature platelets have also been suggested to be less responsive to antiplatelet therapies such as prasugrel in acute coronary syndrome patients[@Bernlochner2015a]. 
 
 As these platelet characteristics provide potential information about platelet hyperactivity and given the increased thrombotic risk seen with adiposity, it is important to assess how adiposity affects platelet properties. Previous studies with modest samples sizes have implemented observational epidemiological methods to explore the effect of BMI on PLT, plateletcrit (PCT) and MPV. There is conflicting observational evidence regarding an association between BMI and PLT[@Furuncuoglu2016; @Han2018a], with some studies suggesting a positive association between BMI and MPV[@Coban2005] and other studies reporting no such association[@Heffron2018]. Furthermore, as there is evidence that immature platelet production is increased in patients with metabolic syndrome and type II diabetes[@Vaduganathan2008a; @Mijovic2015a], it is therefore important to explore whether BMI may be an independent predictor of this trait. It is currently unknown whether the influence of BMI on platelet properties and function are causal and independent of confounding effects.
 
-In this chapter, data from the INTERVAL prospective cohort (N=33388) was used to explore the association between BMI and platelet traits. Figure \@ref(fig:BMI-platelet-overview) shows the associations of the overall thesis hypothesis addressed in the chapter. Here, observational and Mendelian randomization (MR) approaches were employed to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, we therefore employed MR, using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
+In this chapter the aim was to use data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. Figure \@ref(fig:BMI-platelet-overview) shows the associations of the overall thesis hypothesis addressed in the chapter. Here, observational and Mendelian randomization (MR) approaches were employed to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, MR was employed using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
 
 (ref:caption-BMI-platelet-overview) **Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.** Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-overview) Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.
@@ -112,7 +112,7 @@ Analyses were performed using R version 3.4.2[@Team2019a]. To visualize correlat
 
 To understand properties of the GRS for BMI, the association between the GRS with both BMI and covariables were explored. The MR analysis was performed by using a two-stage least squares (2SLS) regression model (using systemfit() function from “systemfit” package[@Henningsen2007]). The MR causal estimates reflect the change in platelet traits (in SD units) per SD increase in BMI. A Wu-Hausman test was performed to test for endogeneity between observational and MR estimates. Exact beta coefficients, confidence intervals and P values are provided throughout and guide strength of association.
 
-Where there was consistent observational and MR evidence for a BMI effect on platelet traits with potential clinical relevance, additional sensitivity analyses were carried out. We explored whether there were different magnitudes of associations across NHS BMI categories indicative of a non-linear relationship. Specifically, participants were stratified by BMI and the association between BMI and IPC estimated within BMI categories.
+Where there was consistent observational and MR evidence for a BMI effect on platelet traits with potential clinical relevance, additional sensitivity analyses were carried out. Differences in magnitudes of associations across NHS BMI categories was explored, indicative of a non-linear relationship. Specifically, participants were stratified by BMI and the association between BMI and IPC estimated within BMI categories.
 
 ### Follow-up analysis to explore the association between immature platelets and aggregation
 Motivated by findings from the primary analyses described above, additional observational analyses were conducted using data from the COagulation and Platelet laboratory Testing in Cardiac Surgery (COPTIC) study. The COPTIC study was an observational, single centre cohort study of adults undergoing cardiac surgery at the Bristol Heart Institute with primary objective of examining the relationship between coagulation laboratory parameters and bleeding outcomes after surgery in 2,541 participants[@Mumford2017]. This study was approved by the UK NHS Research Ethics Committee (09/H0104/53).
@@ -277,7 +277,7 @@ column_spec(1, width = "6cm")  # %>%
 ```
 
 ### Mendelian randomization estimates for the association between BMI and platelet traits
-In the MR analyses, BMI was associated with fewer traits than in the observational analysis (Table \@ref(tab:BMI-platelets-MR), \@ref(fig:BMI-platelet-forest)). The causal estimate for the effect of BMI on SFL was 0.08 SDs per SD increase in BMI (95% CI 0.03 to 0.14, P = 0.003). This estimate was of larger magnitude than the observational estimate. The causal estimate for BMI and IPC was 0.06 SDs per SD increase in BMI (95% CI 0.006 to 0.12, P = 0.03), a similar magnitude of effect to the observational estimate. In the MR analysis, unlike in the observational analysis, the causal estimate did not suggest an effect of BMI on either PCT or PLT. MR estimates did not provide evidence for associations between BMI and other platelet variables. The point estimates were consistently positive, aligning with the positive observational associations seen across the platelet traits. Across all but one (H-IPF) of the platelet phenotypes we did not observe differences in directionality of effect comparing observational effects and causal effects predicted by Mendelian randomization (Figure \@ref(fig:BMI-platelet-forest)).
+In the MR analyses, BMI was associated with fewer traits than in the observational analysis (Table \@ref(tab:BMI-platelets-MR), \@ref(fig:BMI-platelet-forest)). The causal estimate for the effect of BMI on SFL was 0.08 SDs per SD increase in BMI (95% CI 0.03 to 0.14, P = 0.003). This estimate was of larger magnitude than the observational estimate. The causal estimate for BMI and IPC was 0.06 SDs per SD increase in BMI (95% CI 0.006 to 0.12, P = 0.03), a similar magnitude of effect to the observational estimate. In the MR analysis, unlike in the observational analysis, the causal estimate did not suggest an effect of BMI on either PCT or PLT. MR estimates did not provide evidence for associations between BMI and other platelet variables. The point estimates were consistently positive, aligning with the positive observational associations seen across the platelet traits. Across all but one (H-IPF) of the platelet phenotypes, differences in directionality of effect comparing observational effects and causal effects predicted by Mendelian randomization were not observed (Figure \@ref(fig:BMI-platelet-forest)).
 The Wu-Hausman test suggested that observational and MR estimates were similar for the majority of platelet traits (P > 0.05), except for measures of platelet count and plateletcrit (P < 0.001) (Table \@ref(tab:BMI-platelets-MR)). 
 
 (ref:caption-BMI-platelets-MR) **Mendelian randomization estimates for the effect of BMI on platelet traits.** Beta coefficient is the change in platelet measure in SDs per SD higher BMI.
@@ -317,7 +317,7 @@ include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi 
 ```
 
 ### Stratifying BMI and IPC associations by BMI group
-We explored whether associations between BMI and IPC varied across NHS BMI groups (underweight <18.5 kg/m^2^, healthy weight 18.5-24.9kg/m^2^, overweight 25-29.9 kg/m^2^, obesity 30+ kg/m^2^). IPC had consistent BMI effects across observational and MR analyses. Stratifying by BMI category suggested that the strongest association between BMI and IPC was the overweight category (Table \@ref(tab:BMI-platelets-stratified)).
+Associations between BMI and IPC stratified by NHS BMI groups (underweight <18.5 kg/m^2^, healthy weight 18.5-24.9kg/m^2^, overweight 25-29.9 kg/m^2^, obesity 30+ kg/m^2^) were explored in efforts to examine non-linearity. IPC had consistent BMI effects across observational and MR analyses. Stratifying by BMI category suggested that the strongest association between BMI and IPC was the overweight category (Table \@ref(tab:BMI-platelets-stratified)).
 
 \blandscape
 (ref:caption-BMI-platelets-stratified) **Associations between BMI and immature platelet count (IPC) stratified by NHS BMI category.** Beta coefficient is the change in IPC (SDs) per SD increase in BMI
@@ -350,7 +350,7 @@ mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", for
 \elandscape
 
 ### Follow-up associations between IPC and whole blood aggregation in COPTIC
-Given evidence for a causal effect of BMI on IPC in the MR analysis, we sought to evaluate the relationship between IPC and platelet activity as a biological parameter of clinical relevance. Whilst this analysis could not be conducted in INTERVAL due to a lack of suitable data, we were able to utilize data from the COPTIC study to address this question. The COPTIC study is a cohort of cardiac surgery patients, with samples taken pre-surgery. These participants have whole blood aggregation measured, therefore making it possible to determine associations between IPC and aggregation in a clinical setting.
+Given evidence for a causal effect of BMI on IPC in the MR analysis, the relationship between IPC and platelet activity as a biological parameter of clinical relevance was examined. Whilst this analysis could not be conducted in INTERVAL due to a lack of suitable data, the COPTIC study was utilised in order to further characterise the functional effect of IPC. The COPTIC study is a cohort of cardiac surgery patients, with samples taken pre-surgery. These participants have whole blood aggregation measured, therefore making it possible to determine associations between IPC and aggregation in a clinical setting.
 
 ### COPTIC participant characteristics
 The total number of COPTIC participants was 2,541. Of these, 2,518 participants gave consent for future research (Table \@ref(tab:COPTIC-participants-platelets)). Participants included in the analysis were those not on antiplatelet therapy (N=655). The majority of participants were male (61.8%), with a mean age of 63.9 years (SD of 16.1). Similar to the INTERVAL cohort, the mean BMI was in the overweight category (27.2 kg/m^2^ with a SD of 4.9 kg/m^2^). The majority of participants were either never smokers or ex-smokers for more than 5 years (89.2 %). The effect estimate for the effect of BMI on IPC was 0.06 (95% CI -0.01 to 0.14, P=0.09) and therefore consistent with that estimated in the INTERVAL cohort (Table \@ref(tab:BMI-platelets-COPTIC)).
@@ -416,24 +416,26 @@ include_graphics(path = "figure/BMI_platelets/IPC_aggregation.pdf", dpi = NA)
 
 ## Discussion
 
-In this study we used data from 33,388 healthy blood donors to study the effect of BMI on platelet phenotypes including measures of count, size and maturity. The combination of observational and MR estimates suggested a positive causal effect of BMI on SFL and IPC. The observational analysis revealed a strong association between BMI and both PLT and PCT, however the MR estimates did not provide evidence to support this association as causal. Observational analysis using data from a cardiac surgery cohort provided evidence for a positive association between IPC and aggregation induced by adrenaline, TRAP6 and ADP. A summary of these findings is indicated in \@ref(fig:BMI-platelet-cartoon).
+In this chapter data from 33,388 healthy blood donors was used to study the effect of BMI on platelet phenotypes including measures of count, size and maturity. The combination of observational and MR estimates suggested a positive causal effect of BMI on SFL and IPC. The observational analysis revealed a strong association between BMI and both PLT and PCT, however the MR estimates did not provide evidence to support this association as causal. Observational analysis using data from a cardiac surgery cohort provided evidence for a positive association between IPC and aggregation induced by adrenaline, TRAP6 and ADP. A summary of these findings is indicated in \@ref(fig:BMI-platelet-cartoon).
 
-(ref:caption-BMI-platelet-cartoon) Graphical summary of findings
-```{r BMI-platelet-cartoon, echo = FALSE, out.width="90%", fig.cap="(ref:caption-BMI-platelet-cartoon)"}
+(ref:caption-BMI-platelet-cartoon) **Graphical summary of findings**. Figure made using BioRender.com.
+(ref:scaption-BMI-platelet-cartoon) Graphical summary of findings
+
+```{r BMI-platelet-cartoon, echo = FALSE, out.width="90%", fig.cap="(ref:caption-BMI-platelet-cartoon)", fig.scap="(ref:scaption-BMI-platelet-cartoon)"}
 include_graphics(path = "figure/BMI_platelets/Visual_abstract.pdf", dpi = NA)
 ```
 
-The observational and MR analyses in the current study provide evidence for a positive association between BMI and both IPC and SFL. Stratifying by NHS BMI category suggested that this estimate is strongest in the overweight category. As IPC is derived using SFL, the measure of mRNA content, these measures are highly correlated. Whilst few studies have explored the direct association between BMI and immature platelet measures, there is some evidence for increased immature platelets in subjects with metabolic syndrome (MS) and subjects with type II diabetes compared with control subjects[@Vaduganathan2008a; @Mijovic2015a]. In these studies, participants with MS or type II diabetes also had a higher BMI, which could be a possible cause of this increase in immature platelets. Indeed, evidence from our analysis suggests that BMI, independent of metabolic syndrome or type II diabetes, may causally influence IPC and SFL.
+The observational and MR analyses in the current chapter provide evidence for a positive association between BMI and both IPC and SFL. Stratifying by NHS BMI category suggested that this estimate is strongest in the overweight category. As IPC is derived using SFL, the measure of mRNA content, these measures are highly correlated. Whilst few studies have explored the direct association between BMI and immature platelet measures, there is some evidence for increased immature platelets in subjects with metabolic syndrome (MS) and subjects with type II diabetes compared with control subjects[@Vaduganathan2008a; @Mijovic2015a]. In these studies, participants with MS or type II diabetes also had a higher BMI, which could be a possible cause of this increase in immature platelets. Indeed, evidence from our analysis suggests that BMI, independent of metabolic syndrome or type II diabetes, may causally influence IPC and SFL.
 
-As IPC is an indirect measure of platelet production[@Lev2016a], these results suggest that an increased BMI may lead to an increased production of platelets. It has been reported that immature platelets have increased thrombotic potential[@Lev2016a; @Grove2011a] and may be predictive of cardiovascular events[@Ibrahim2014; @Freynhofer2017a], suggesting that an increase in the number of immature platelets may be of functional and clinical relevance. A follow-up analysis confirmed that higher IPC was associated with greater platelet aggregation independent of absolute platelet count within a cardiac surgery cohort. Positive associations were found between IPC and aggregation induced by adrenaline, TRAP-6 and ADP, suggesting general platelet hyperactivity with more immature platelets. A previous study in a coronary artery disease cohort also found a positive correlation between IPC and aggregation induced by arachidonic acid, collagen and ADP[@Grove2011a]. These findings suggest that IPC can be used as a proxy for platelet hyperactivity within a cohort with a history of cardiovascular disease. Measures of immature platelets are currently not considered in the clinic when prescribing antiplatelet therapy, however if a higher immature platelet count is demonstrative of newly produced, hyperactive platelets then this could be important in guiding dosage regimes to ensure sufficient platelet inhibition[@Bernlochner2015a]. Observational studies have also found that patients with COVID-19 have elevated immature platelet counts and fraction, which could partly explain high rates COVID-19 induced thrombosis[@Cohen2020, @Klok2020]. Despite the association between BMI and IPC, there was less evidence for an effect of BMI on IPF. This lack of association may be because IPF is the proportion of immature platelets, therefore if someone had a higher number of immature platelets, but also a higher number of platelets overall (for example due to increased platelet lifespan), there would be no increase in the immature platelet fraction.
+As IPC is an indirect measure of platelet production[@Lev2016a], these results suggest that an increased BMI may lead to an increased production of platelets. It has been reported that immature platelets have increased thrombotic potential[@Lev2016a; @Grove2011a] and may be predictive of cardiovascular events[@Ibrahim2014; @Freynhofer2017a], suggesting that an increase in the number of immature platelets may be of functional and clinical relevance. A follow-up analysis confirmed that higher IPC was associated with greater platelet aggregation independent of absolute platelet count within a cardiac surgery cohort. Positive associations were found between IPC and aggregation induced by adrenaline, TRAP-6 and ADP, suggesting general platelet hyperactivity with more immature platelets. A previous study in a coronary artery disease cohort also found a positive correlation between IPC and aggregation induced by arachidonic acid, collagen and ADP[@Grove2011a]. These findings suggest that IPC can be used as a proxy for platelet hyperactivity within a cohort with a history of CVD. Measures of immature platelets are currently not considered in the clinic when prescribing antiplatelet therapy, however if a higher immature platelet count is demonstrative of newly produced, hyperactive platelets then this could be important in guiding dosage regimes to ensure sufficient platelet inhibition[@Bernlochner2015a]. Observational studies have also found that patients with COVID-19 have elevated immature platelet counts and fraction, which could partly explain high rates COVID-19 induced thrombosis[@Cohen2020, @Klok2020]. Despite the association between BMI and IPC, there was less evidence for an effect of BMI on IPF. This lack of association may be because IPF is the proportion of immature platelets, therefore if someone had a higher number of immature platelets, but also a higher number of platelets overall (for example due to increased platelet lifespan), there would be no increase in the immature platelet fraction.
 
-In general, previous studies have reported positive observational associations between BMI and both PLT and PCT[@Furuncuoglu2016]. More direct measures of body fat such as total fat mass, waist-hip ratio and waist circumference have also been reported to be positively associated with both PLT and PCT[@Han2018a]; the observational evidence from the current study is in agreement with this. The MR analysis did not detect causal effects of BMI on measures of PLT/PCT, however the estimates were consistently positive. It is possible that IPC could be raised in absence of raised PLT as platelets may being produced at an increased rate, but could also be being destroyed at an increased rate. The small P values in the Wu-Hausman test for endogeneity for plateletcrit and platelet count variables support that the observational and MR estimates are different. Estimates could be biased due to confounding factors, reverse causation or other sources of bias. Possible routes of confounding could include stress, inflammation and nutrition, which could exert independent effects on both BMI and platelet count. 
+In general, previous studies have reported positive observational associations between BMI and both PLT and PCT[@Furuncuoglu2016]. More direct measures of body fat such as total fat mass, waist-hip ratio and waist circumference have also been reported to be positively associated with both PLT and PCT[@Han2018a]; the observational evidence from the current chapter is in agreement with this. The MR analysis did not detect causal effects of BMI on measures of PLT/PCT, however the estimates were consistently positive. It is possible that IPC could be raised in absence of raised PLT as platelets may being produced at an increased rate, but could also be being destroyed at an increased rate. The small P values in the Wu-Hausman test for endogeneity for plateletcrit and platelet count variables support that the observational and MR estimates are different. Estimates could be biased due to confounding factors, reverse causation or other sources of bias. Possible routes of confounding could include stress, inflammation and nutrition, which could exert independent effects on both BMI and platelet count. 
 
-Both observational and MR estimates suggested that BMI is not associated with measures of platelet size, such as MPV and P-LCR. There are conflicting findings in the literature, with some studies suggesting that there is a positive association between BMI and MPV[@Coban2005] and others showing no association[@Furuncuoglu2016; @Han2018a; @Heffron2018]. The results of the current study suggest that associations seen previously between BMI and MPV are likely due to confounding of observational estimates. The lack of association between BMI and MPV may be surprising given a correlation coefficient of 0.62 between IPC and MPV.  As BMI was positively associated with immature platelet count, and immature platelets tend to be larger, it may be surprising that BMI was not associated with measures of platelet size. However, immature platelets make up a small percentage of overall platelets (~3-6 %)[@Ibrahim2014; @Bernlochner2015a], therefore the increase in immature platelets may not affect the overall median size of the whole platelet population.
+Both observational and MR estimates suggested that BMI is not associated with measures of platelet size, such as MPV and P-LCR. There are conflicting findings in the literature, with some studies suggesting that there is a positive association between BMI and MPV[@Coban2005] and others showing no association[@Furuncuoglu2016; @Han2018a; @Heffron2018]. The results of the current chapter suggest that associations seen previously between BMI and MPV are likely due to confounding of observational estimates. The lack of association between BMI and MPV may be surprising given a correlation coefficient of 0.62 between IPC and MPV.  As BMI was positively associated with immature platelet count, and immature platelets tend to be larger, it may be surprising that BMI was not associated with measures of platelet size. However, immature platelets make up a small percentage of overall platelets (~3-6 %)[@Ibrahim2014; @Bernlochner2015a], therefore the increase in immature platelets may not affect the overall median size of the whole platelet population.
 
-Although this study suggests potential effects of BMI on platelet traits such as SFL and IPC, it does not provide mechanistic insight into how BMI exerts these effects. Previous studies have suggested that inflammation driven by adiposity can stimulate megakaryocyte proliferation, thereby increasing platelet numbers[@Han2018a]. There is evidence that inflammatory mediators such as interleukin-6 (IL-6) could be one such factor[@Kaser2001]. Further study would be warranted to explore these mechanisms, as well as replicate the current findings, such as through independent population or clinical studies. 
+Although this chapter suggests potential effects of BMI on platelet traits such as SFL and IPC, it does not provide mechanistic insight into how BMI exerts these effects. Previous studies have suggested that inflammation driven by adiposity can stimulate megakaryocyte proliferation, thereby increasing platelet numbers[@Han2018a]. There is evidence that inflammatory mediators such as interleukin-6 (IL-6) could be one such factor[@Kaser2001]. Further study would be warranted to explore these mechanisms, as well as replicate the current findings, such as through independent population or clinical studies. 
 
 ### Limitations {#INTERVAL-limitations}
-There are a few limitations to the study that should be recognised. Firstly, BMI was derived from self-reported height and weight. Although there is potential for this to bias observations, previous studies have found that self-reported BMI and BMI measured in the clinic are strongly associated[@Nikolaou2017]. The GRS also associates with BMI to the extent expected. Secondly, there may be other confounders which were not recorded within INTERVAL and therefore could not be accounted for in our models, such as, socio-economic position, which may affect both BMI and risk of thrombosis. Therefore, residual confounding of observational estimates cannot be ruled out. Whilst the INTERVAL study provided relatively precise estimates of effect overall, larger sample sizes within each BMI category would be required to further investigate potential nonlinearity in the relationship between BMI and IPC. With respect to the observational analysis conducted in COPTIC, the sample size is modest, which may limit power to detect associations. Furthermore, this cohort required cardiac surgery and therefore it is possible that associations found may not be generalizable to the wider population,  as participants also displayed greater aggregatory responses than the reference ranges[@Marcucci2015].  However, these findings do indicate that immature platelets may be a biomarker of platelet hyperactivity in patients with a history of cardiovascular disease. It is important to note that the anticoagulant used (EDTA) has been reported to affect platelet parameters, such as increasing MPV and decreasing PLT[@Mannuß2020]. Despite this, EDTA is the standard anticoagulant used for full blood counts in the NHS. The Sysmex analyzers used in INTERVAL and COPTIC were different models, however, it has been shown that there is strong association between platelet measures between the XE and newer XN analyzers[@Briggs2012].
+There are a few limitations to the analyses presented in this chapter that should be recognised. Firstly, BMI was derived from self-reported height and weight. Although there is potential for this to bias observations, previous studies have found that self-reported BMI and BMI measured in the clinic are strongly associated[@Nikolaou2017]. The GRS also associates with BMI to the extent expected. Secondly, there may be other confounders which were not recorded within INTERVAL and therefore could not be accounted for in our models, such as, socio-economic position, which may affect both BMI and risk of thrombosis. Therefore, residual confounding of observational estimates cannot be ruled out. Whilst the INTERVAL study provided relatively precise estimates of effect overall, larger sample sizes within each BMI category would be required to further investigate potential nonlinearity in the relationship between BMI and IPC. With respect to the observational analysis conducted in COPTIC, the sample size is modest, which may limit power to detect associations. Furthermore, this cohort required cardiac surgery and therefore it is possible that associations found may not be generalizable to the wider population,  as participants also displayed greater aggregatory responses than the reference ranges[@Marcucci2015].  However, these findings do indicate that immature platelets may be a biomarker of platelet hyperactivity in patients with a history of CVD. It is important to note that the anticoagulant used (EDTA) has been reported to affect platelet parameters, such as increasing MPV and decreasing PLT[@Mannuß2020]. Despite this, EDTA is the standard anticoagulant used for full blood counts in the NHS. The Sysmex analyzers used in INTERVAL and COPTIC were different models, however, it has been shown that there is strong association between platelet measures between the XE and newer XN analyzers[@Briggs2012].
 
-Altogether, we show observational and MR evidence that an increased BMI is associated with an increase in number of immature platelets. Observational evidence indicates that higher immature platelet count is associated with enhanced aggregation in a cardiac surgery cohort. Together, these results indicate that higher BMI may enhance platelet function and thrombosis by increasing platelet production and immature platelet count. 
+Altogether, observational and MR evidence indicate that an increased BMI is associated with an increase in number of immature platelets. Observational evidence indicates that higher immature platelet count is associated with enhanced aggregation in a cardiac surgery cohort. Together, these results indicate that higher BMI may enhance platelet function and thrombosis by increasing platelet production and immature platelet count. 
