--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -35,9 +35,9 @@ The following chapter reports a specifically designed patient study. Recruitment
 
 ## Background
 
-As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis[@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was also positively associated with whole blood platelet aggregation in response to various platelet agonists (adrenaline, protease activating receptor 1 peptide (PAR1-AP/TRAP-6) and adenosine diphosphate (ADP)) in a cardiac surgery cohort. Although these analyses suggest that higher BMI leads to platelet hyperactivity, this association was not directly assessed due to the limited platelet function data available. In COPTIC, the only available platelet function data was whole blood platelet aggregation; there are other platelet function assays which may provide more extensive information about platelet activation. COPTIC was also a cohort which had a history of cardiovascular disease, therefore associations could be confounded by the presence of cardiovascular disease. Therefore, studies which have information about body composition and detailed platelet function assays are required.
+As detailed in Chapter \@ref(BMI-platelets-INTERVAL), there is evidence that people with a higher BMI have an increased risk of cardiovascular events such as coronary heart disease (CHD) or stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. As platelets are one of the key cells involved in haemostasis and thrombosis[@Koupenova2017a], it is likely that a higher BMI has a direct effect on platelet function. The previous chapter provided evidence that higher BMI causes an increase in the production of immature platelets, evidenced by an increase in immature platelet count (IPC). IPC was also positively associated with whole blood platelet aggregation in response to various platelet agonists (adrenaline, protease activating receptor 1 peptide (PAR1-AP/TRAP-6) and adenosine diphosphate (ADP)) in a cardiac surgery cohort. Although these analyses suggest that higher BMI leads to platelet hyperactivity, this association was not directly assessed due to the limited platelet function data available. In COPTIC, the only available platelet function data was whole blood platelet aggregation; there are other platelet function assays which may provide more extensive information about platelet activation. COPTIC was also a cohort which had a history of CVD, therefore associations could be confounded by the presence of CVD. Therefore, studies which have information about body composition and detailed platelet function assays are required.
 
-When an individual struggles with maintaining weight loss and there is concern for their health, bariatric surgery is advised. This surgery utilises various techniques (gastric band, bypass or sleeve) that aim to restrict the size of the stomach, therefore reducing appetite. Current NHS guidelines for bariatric surgery indicate that surgery is available for those with a BMI of 40+ kg/m^2^. A BMI of over 40kg/m^2^ is current classified as having severe obesity. This group of patients is therefore a suitable patient group to obtain blood samples from in order to further characterise effects of a sustained high BMI.
+When an individual struggles with maintaining weight loss and there is concern for their health, bariatric surgery is advised. This surgery utilises various surgical techniques (gastric band, bypass or sleeve) that aim to restrict the size of the stomach, therefore reducing appetite. Current NHS guidelines for bariatric surgery indicate that surgery is available for those with a BMI of 40+ kg/m^2^. A BMI of over 40kg/m^2^ is current classified as having severe obesity. This group of patients is therefore a suitable patient group to obtain blood samples pre-surgery in order to further characterise effects of a sustained high BMI.
 
 Previous studies have attempted to determine the direct effects of BMI on platelet function and signalling, where there is conflicting evidence regarding how BMI affects platelet function[@Barrachina2019; @Nardin2015; @Deharo2014; @Sibbing2007]. Such studies have focused on the relationship between BMI and platelet function in patients receiving dual antiplatelet therapy (DAPT). In these studies there is evidence that in people with higher BMI, antiplatelet drugs such as prasugrel, which acts at the P2Y~12~ receptor, may not be as effective at suppressing platelet activity[@Deharo2014]. These findings have come from using a phospho-VASP assay. PGE1 suppresses platelet function by acting at a G~s~ coupled receptor, resulting in activation of adenylate cyclase and a rise in cAMP, subsequent activation of PKA and phosphorylation of VASP. G~i/o~ coupled GPCRs oppose G~s~ pathways: activation of the ADP receptor P2Y~12~ receptor inhibits activation of adenylate cyclase through G~i/o~ thereby opposing PGE1-mediatied VASP phosphorylation. Lower phospho-VASP levels are therefore indicative of less inhibition by the antiplatelet drug and more activation of the platelet by ADP. It is less clear what the relationship is between BMI and platelet function in those who are not on any antiplatelet therapy and across other platelet function assays. In this study I therefore aimed to determine whether high BMI is associated with an alteration in platelet function and signalling (Figure \@ref(fig:BMI-platelet-overview2)).
 
@@ -49,7 +49,7 @@ include_graphics(path = "figure/Bariatric_study/Thesis_graphic_overview_BMI_plat
 
 ## Materials and Methods
 ### Materials {#materials}
-Protease-activated receptor 1 (PAR-1)-activating peptide (TRAP-6/SFLLRN-NH2) was from Bachem (Bubendorf, Switzerland), crosslinked collagen-related peptide (CRP-XL) from Prof. Richard Farndale (Department of Biochemistry, University of Cambridge, UK). Adenosine diphosphate (ADP) was from Sigma-Aldrich (Poole, UK). cOmplete mini protease inhibitor tablets and phosSTOP phosphatase inhibitors were from Roche Life Sciences (Welwyn Garden City, UK). The Pierce bicinchoninic acid (BCA) assay was from ThermoFisher Scientific (Altrincham, UK). Sodium Citrate Vacutainer® tubes, FixLyse, PE-Cy5-conjugated mouse anti-human CD42b antibody, FITC mouse anti-human CD61 antibody, Fc block, PE mouse anti-human platelet GPVI antibody, FITC mouse anti-human PAC-1 and PE mouse anti-human CD62P antibodies were from BD (Wokingham, UK). FITC mouse anti-human CD41 and CD42b antibodies were from BioLegend (London, UK). Human MDC (69 amino acids) and TARC were from PeproTech (London, UK). Indomethacin, PGE1, Triton X-100, apyrase, HEPES Tyrode’s (10 mM HEPES, 1 mM magnesium, 0.5 mM monosodium phosphate, 145 mM sodium chloride, 3 mM potassium chloride, pH 7.2), 2-butanol, ethanol, methanol and bovine serum albumin (BSA) were purchased from Sigma-Aldridge (Poole, UK). Phosphate buffered saline (PBS), trisodium citrate, acid citrate dextrose (ACD), D-glucose, ammonium persulfate (APS), Tris buffered saline (TBS), polysorbate 20 (Tween 20), Donkey anti-Rabbit IgG (H+L) Highly Cross Adsorbed Secondary Antibody Alexa Fluor 647 and Fura-2 were purchased from Thermo Fisher Scientific (Loughborough, UK). 30 % acrylamide mix (37.5:1), 1.0 M Tris pH 6.8 solution and 1.5 M Tris pH 8.8 solution purchased from National Diagnostics (Nottingham, UK). Immobilon-FL PVDF membranes (0.45-micron filter) were purchased from Merck Millipore (Hertfordshire, UK). Sodium dodecyl sulphate (SDS) was purchased from GE Healthcare worldwide (Hatfield, UK). SDS solution (10 %), tetramethylethylenediamine (TEMED), filter paper and Precision Plus protein pre-stained standards were purchased from Bio-Rad laboratories (Bredbury, UK). Blocking buffer was purchased from LI-COR Biosciences (Cambridge, UK). Rabbit pSer239 VASP and pSer157 VASP antibodies and pSer425 Talin were purchased from Cell Signaling Technology (Hertfordshire, UK). Alexa Fluor 680 AffiniPure Donkey Anti-Goat IgG and Alexa Fluor 680 AffiniPure Donkey Anti-Rabbit IgG were obtained from Jackson Immunoresearch (Cambridgeshire, UK). Paraformaldehyde was purchased from Acros Organics (Geel, Belgium). Annexin V Alexa Fluor 568 conjugate was from ThermoFisher. The inhibitor AZD-2908 was from Bio-Techne, YM-284890 was from Tebu-Bio Ltd and Y27632 was from Generon Ltd. Tween-20 (Sigma G02062) and hyrogenated gelatine (Sigma P1379) were from Sigma-Aldrich (Poole, UK). 
+Protease-activated receptor 1 (PAR-1)-activating peptide (TRAP-6/SFLLRN-NH2) was from Bachem (Bubendorf, Switzerland), crosslinked collagen-related peptide (CRP-XL) from Prof. Richard Farndale (Department of Biochemistry, University of Cambridge, UK). Adenosine diphosphate (ADP) was from Sigma-Aldrich (Poole, UK). cOmplete mini protease inhibitor tablets and phosSTOP phosphatase inhibitors were from Roche Life Sciences (Welwyn Garden City, UK). The Pierce bicinchoninic acid (BCA) assay was from ThermoFisher Scientific (Altrincham, UK). Sodium Citrate Vacutainer® tubes, FixLyse, PE-Cy5-conjugated mouse anti-human CD42b antibody, FITC mouse anti-human CD61 antibody, Fc block, PE mouse anti-human platelet GPVI antibody, FITC mouse anti-human PAC-1 and PE mouse anti-human CD62P antibodies were from BD (Wokingham, UK). FITC mouse anti-human CD41 and CD42b antibodies were from BioLegend (London, UK). Human MDC (69 amino acids) and TARC were from PeproTech (London, UK). Indomethacin, PGE1, Triton X-100, apyrase, HEPES Tyrode’s (10 mM HEPES, 1 mM magnesium, 0.5 mM monosodium phosphate, 145 mM sodium chloride, 3 mM potassium chloride, pH 7.2), 2-butanol, ethanol, methanol and bovine serum albumin (BSA) were purchased from Sigma-Aldridge (Poole, UK). Phosphate buffered saline (PBS), trisodium citrate, acid citrate dextrose (ACD), D-glucose, ammonium persulfate (APS), Tris buffered saline (TBS), polysorbate 20 (Tween 20), Donkey anti-Rabbit IgG (H+L) Highly Cross Adsorbed Secondary Antibody Alexa Fluor 647 and Fura-2 were purchased from Thermo Fisher Scientific (Loughborough, UK). 30 % acrylamide mix (37.5:1), 1.0 M Tris pH 6.8 solution and 1.5 M Tris pH 8.8 solution purchased from National Diagnostics (Nottingham, UK). Immobilon-FL PVDF membranes (0.45-micron filter) were purchased from Merck Millipore (Hertfordshire, UK). Sodium dodecyl sulphate (SDS) was purchased from GE Healthcare worldwide (Hatfield, UK). SDS solution (10 %), tetramethylethylenediamine (TEMED), filter paper and Precision Plus protein pre-stained standards were purchased from Bio-Rad laboratories (Bredbury, UK). Blocking buffer was purchased from LI-COR Biosciences (Cambridge, UK). Rabbit pSer239 VASP and pSer157 VASP antibodies and pSer425 Talin were purchased from Cell Signaling Technology (Hertfordshire, UK). Alexa Fluor 680 AffiniPure Donkey Anti-Goat IgG and Alexa Fluor 680 AffiniPure Donkey Anti-Rabbit IgG were obtained from Jackson Immunoresearch (Cambridgeshire, UK). Paraformaldehyde was purchased from Acros Organics (Geel, Belgium). Annexin V Alexa Fluor 568 conjugate was from ThermoFisher. The inhibitor AZD-2908 was from Bio-Techne, YM-284890 was from Tebu-Bio Ltd and Y27632 was from Generon Ltd. Tween-20 (Sigma G02062) and hyrogenated gelatine (Sigma P1379) were from Sigma-Aldrich (Poole, UK). FITC and PE conjugated Mouse IgG1 K isotype controls were purchased from Becton Dickinson UK Ltd (Oxford, UK).
 
 ### Ethical approval process
 This study was designed in July 2019. To be able to carry out a patient study, there were various documents that needed to be prepared. These were submitted using the Integrated Research Application System (IRAS). Documents included were a research protocol, statistical review, IRAS form, consent forms and participant information sheets for bariatric patients and control subjects, GP letters and a copy of the email invite sent out to control participants. Upon ethical approval from the London Riverside Research Ethics Committee (REC reference 19/LO/1781) and approval from Southmead Hospital, this study was first approved to start recruitment in March 2020. Recruitment was put on hold until May 2021 due to the pandemic. During this time, two amendments were made to be able to account for: 1) whether the participant had previously had a COVID-19 infection and 2) whether the participant had been vaccinated for COVID-19 due to reports that COVID-19 infection and the AstraZeneca vaccine lead to an increased risk of thrombotic outcomes[@Middeldorp2020; @Scully2021]. The second amendment was not approved by Southmead Hospital in time and therefore the vaccination status could not be recorded for bariatric patients.
@@ -67,16 +67,16 @@ ACD (1:7) and apyrase (0.02 U/mL) were added  to PRP. PRP was centrifuged (1700 
 Citrated whole blood (200 uL) was analysed using the Sysmex XN-20 haematology analyser. Platelet readouts were platelet count (PLT) (x 10^9^/L), immature platelet fraction (IPF) (%), immature platelet count (IPC) (x 10^9^/L), side fluorescence (SFL, a measure of mRNA content in relative fluorescent units/RFUs), forward scatter (FSC, a measure of platelet size measured in RFUs) and side scatter (SSC, a measure of granularity in RFUs).
 
 ### Freeze-dried agonist plates
-Agonist was freeze dried onto plates to reduce day-to-day variation in agonist concentrations, as described previously [@Chan2018]. 96 well plates were coated with 10 mM PBS with 0.75% w/v hydrogenated gelatine and 0.05% v/v Tween-20 with a pH of 0.74 and left for 4 hours at room temperature. Plates were washed with dH~2~O with 0.01% v/v Triton X-100, followed by two washes with dH~2~O and left to dry in a fume hood. Agonist was added to the plates (5uL per well at 10x final concentration): agonists used were protease-activated receptor 1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen related peptide (CRP). Plates were then stored in a -80°C freezer for 1 hour, then placed into the freeze dryer (-50°C) and left overnight. Once freeze-dried, plates were vacuum packed.
+Agonist was freeze dried onto plates to reduce day-to-day variation in agonist concentrations, as described previously [@Chan2018]. 96 well plates were coated with 10 mM PBS with 0.75% w/v hydrogenated gelatine and 0.05% v/v Tween-20 with a pH of 0.74 and left for 4 hours at room temperature. Plates were washed with dH~2~O with 0.01% v/v Triton X-100, followed by two washes with dH~2~O and left to dry in a fume hood. Agonist was added to the plates (5uL per well at 10x final concentration): agonists used were protease-activated receptor 1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen related peptide (CRP). Plates were then stored in a -80°C freezer for 1 hour, then placed into the freeze dryer (-50°C) and left overnight. Once freeze-dried, plates were vacuum packed and used within a month.
 
 ### Integrin α~IIb~β~3~ activation and P-selectin expression measured by flow cytometry
-Isolated PRP was diluted 1:40 in HEPES Tyrode's. FITC-conjugated PAC1 and PE-conjugated CD62P antibodies were added in a 2:1 ratio (5uL PAC1 and 2.5uL CD62P per well). This master mix was added to pre-prepared vacuum packed 96 well plates with freeze-dried agonist to a final folume of 50 uL. HEPES Tyrode's was also freeze-dried onto plates, which was used for a measurement of unstimulated integrin α~IIb~β~3~ activation and P-selectin expression. Platelets were stimulated with agonists for 10 minutes. Platelets were fixed with 1% paraformaldehyde (PFA) for 10 minutes. Platelets were gated and the median fluorescence intensity (MFI) in arbitrary units (AUs) was reported from a total of 10,000 events.
+Isolated PRP was diluted 1:40 in HEPES Tyrode's. FITC-conjugated PAC1 and PE-conjugated CD62P antibodies were added in a 2:1 ratio (5uL PAC1 and 2.5uL CD62P per well). This master mix was added to pre-prepared vacuum packed 96 well plates with freeze-dried agonist to a final folume of 50 uL. HEPES Tyrode's was also freeze-dried onto plates, which was used for a measurement of unstimulated integrin α~IIb~β~3~ activation and P-selectin expression. Platelets were stimulated with agonists for 10 minutes. Platelets were fixed with 1% paraformaldehyde (PFA) for 10 minutes. Platelets were gated using the  BD Accuri Flow Cytometer and the median fluorescence intensity (MFI) in arbitrary units (AUs) was reported from a total of 10,000 events.
 
 ### Surface receptor levels measured by flow cytometry
-Diluted PRP (1:40) was used for unstimulated surface receptor detection. Antibodies were added (1:10 v/v) to a final volume of 50 uL. Antibodies used include anti-human CD41 (α~IIb~), CD42b (GP1bα), CD61 (β~3~) (FITC-conjugated) and GPVI and CD110 (thrombopoietin/TPO receptor) (PE-conjugated). Platelets were fixed with 1% PFA for 10 minutes. Platelets were gated and the MFI was reported in AUs from a total of 10,000 events. 
+Diluted PRP (1:40) was used for unstimulated surface receptor detection. Antibodies were added (1:10 v/v) to a final volume of 50 uL. Antibodies used include anti-human CD41 (α~IIb~), CD42b (GP1bα), CD61 (β~3~) (FITC-conjugated) and GPVI and CD110 (thrombopoietin/TPO receptor) (PE-conjugated). Platelets were fixed with 1% PFA for 10 minutes. Platelets were gated and the MFI was reported in AUs from a total of 10,000 events. IgG isotype controls for both PE-conjugated and FITC-conjugated antibodies were also used to help distinguish non-specific background signal from the specific antibody signal.
 
 ### Platelet-neutrophil assay measured by flow cytometry
-Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer and incubated with FITC-conjugated anti-CD41 and PE-conjugated anti-C45 antibodies at room temperature for 15 mins (antibodies used 1:10 v/v). Samples were either stimulated (+ 5 ug/mL CRP) or unstimulated (+ vehicle) for the same 15 minute duration. Samples were fixed with FixLyse for 10 minutes, followed by a final concentration of 4 % PFA for 10 minutes. Fluorescence was quantified using the flow cytometer, where 1000 neutrophil events were analysed based on a gating of CD45 and SSC parameters. Aggregates of platelets and neutrophils were defined by being both CD41+ and CD45+.
+Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer and incubated with FITC-conjugated anti-CD41 and PE-conjugated anti-CD45 antibodies at room temperature for 15 mins (antibodies used 1:10 v/v). Samples were either stimulated (+ 5 ug/mL CRP) or unstimulated (+ vehicle) for the same 15 minute duration. Samples were fixed with FixLyse for 10 minutes, followed by a final concentration of 4 % PFA for 10 minutes. Fluorescence was quantified using the flow cytometer, where 1000 neutrophil events were analysed based on a gating of CD45 and SSC parameters. Aggregates of platelets and neutrophils were defined by being both CD41+ and CD45+.
 
 ### Tandem Mass Tag Mass Spectrometry (TMT-MS) quantification of platelet proteins
 Platelet lysate samples (50 ug total protein) were digested with trypsin and labelled with TMT 15 plex reagents (ThermoFisher Scientific, Loughborough, UK). Labelled samples were pooled. The pooled sample was evaporated to dryness then resuspended in formic acid (5%). The pooled sample was then desalted using a SepPak cartridge (Waters, Milford, Massachussetts, USA). Eluate from the SepPak cartridge was evaporated to dryness and resuspended prior to fractionation by high pH reversed-phase chromatography using an Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ulitamte 3000 nano-LC system in line with an Orbitrap Fusion Tribrid Mass Spectrometer (ThermoFisher Scientific). Further details of the methods used for mass spectrometry within the proteomics facility have been previously published[@Durrant2020].
