--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -280,7 +280,7 @@ Platelets express chemokine receptors as they are also key cells in inflammation
 
 As well as functional effects, this chapter aimed to assess whether effects are due to the CCR4 receptor and the downstream signalling involved. It has been reported that MDC inhibits calcium currents in HEK293 cells and barium currents dorsal root ganglia neurones and is therefore G~i/o~ coupled[@Oh2002]. MDC and TARC were not able to reduce VASP phosphorylation induced by PGE1, suggesting that the effects are not via G~i/o~ in platelets. It is possible that this experiment was not sensitive enough to detect the reduction in VASP phosphorylation, as ADP did not reduce VASP levels as much as previous reports[@Hezard2005]. Another study suggested that CCR4 is coupled to G~q~ due to the calcium response observed by MDC[@Kowalska2000]. Inhibiting G~q~ coupling in the current study inhibited the aggregation induced by MDC. It is therefore likely that CCR4 couples to G~q~.
 
-MDC and TARC have been implicated in cardiovascular disease such as atherosclerosis[@Weber2004], but experiments focusing on the effect of MDC and TARC on platelet function have not used genetic epidemiology to explore whether genetic variants which lead to alterations in the levels of circulating MDC and TARC in the plasma are associated with an increased risk of disease. As MDC and TARC can activate platelets, the effect of MDC and TARC on disease was explored using two sample MR. The SNP that was associated with levels of MDC, rs77542162, was also associated with increased risk of DVT and pulmonary embolism. This effect may occur due to increased platelet priming by higher levels of MDC. Patients at risk of developing VTE have a hypercoagulant state and are prescribed anticoagulants to reduce the risk. Experiments indicated that MDC could not potentiate PS exposure, a marker of coagulation, therefore suggesting that MDC does not increaes the risk through an increase in coagulation. Further experiments are required to determine how MDC could mediate the risk of VTE. Despite the evidence for a causal effect, it is possible that this SNP could affect the outcome through routes other than through the exposure (horizontal pleiotropy). For example, the SNP could also be associated with increased in number of red blood cells, thereby increased risk of VTE. This is also reflected by other outcomes being related to increased levels of MDC such as forced vital capacity (FVC). As there is only one SNP, sensitivity analyses cannot be performed to test this. Further analyses such as a colocalisation analysis could help determine whether the relationship between MDC and DVT/PE is causal as this method estimates whether an exposure and an outcome share a causal top signal in a particular genomic region[@Giambartolomei2014].
+MDC and TARC have been implicated in CVD such as atherosclerosis[@Weber2004], but experiments focusing on the effect of MDC and TARC on platelet function have not used genetic epidemiology to explore whether genetic variants which lead to alterations in the levels of circulating MDC and TARC in the plasma are associated with an increased risk of disease. As MDC and TARC can activate platelets, the effect of MDC and TARC on disease was explored using two sample MR. The SNP that was associated with levels of MDC, rs77542162, was also associated with increased risk of DVT and pulmonary embolism. This effect may occur due to increased platelet priming by higher levels of MDC. Patients at risk of developing VTE have a hypercoagulant state and are prescribed anticoagulants to reduce the risk. Experiments indicated that MDC could not potentiate PS exposure, a marker of coagulation, therefore suggesting that MDC does not increaes the risk through an increase in coagulation. Further experiments are required to determine how MDC could mediate the risk of VTE. Despite the evidence for a causal effect, it is possible that this SNP could affect the outcome through routes other than through the exposure (horizontal pleiotropy). For example, the SNP could also be associated with increased in number of red blood cells, thereby increased risk of VTE. This is also reflected by other outcomes being related to increased levels of MDC such as forced vital capacity (FVC). As there is only one SNP, sensitivity analyses cannot be performed to test this. Further analyses such as a colocalisation analysis could help determine whether the relationship between MDC and DVT/PE is causal as this method estimates whether an exposure and an outcome share a causal top signal in a particular genomic region[@Giambartolomei2014].
 
 This chapter has provided evidence for a an effect of MDC and TARC on platelet function and indicated possible mechanisms of effect. As mentioned in the introduction of the current chapter, there is evidence that patients with obesity have higher circulating levels of MDC[@Safa2016], however the effect of BMI and levels of these chemokines needs to assessed in a larger cohort and using a causal framework. The SOMAScan proteomics panel detects these circulating chemokines, therefore further exploration of the effect of BMI on these chemokines will be presented in Chapter \@ref(BMI-protein-MR) by using one sample MR and Chapter \@ref(BMI-protein-RCT) which utilises a weight loss randomised control trial.
 
