--- a/index/07-chap7.Rmd
+++ b/index/07-chap7.Rmd
@@ -33,9 +33,9 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 
 ## Background
 
-Obesity is associated with an increased risk of type II diabetes (T2D), cardiovascular diseases, musculoskeletal diseases, and types of cancer[@Garg2014; @Khan2018; @Kortt2002]. These associations are well established, however mechanisms of disease are less clear. It is likely that a change in the composition of proteins circulating in the blood plays a role in obesity-related cardiovascular risk[@Goudswaard2021]. The previous results chapter (Chapter \@ref(BMI-protein-MR)) examined the effect of BMI on the plasma proteome and provided estimates for the average change in proteins per average difference in BMI in a general population, using observational estimates and one sample Mendelian randomization (MR). There was evidence of a BMI effect on proteins such as leptin, sex hormone binding globulin (SHBG), fatty acid binding protein 4 (FABP4) and fumarylacetoacetase. Within an enrichment analysis, this change in circulating levels of these proteins was implicated in cardiovascular diseases. There is also evidence that obesity affects platelet function, thereby elevating the risk of thrombotic events. There is evidence from the literature and from Chapter \@ref(chemokine-platelets) that circulating proteins could mediate this risk.
+Obesity is associated with an increased risk of type II diabetes (T2D), CVD, musculoskeletal diseases, and types of cancer[@Garg2014; @Khan2018; @Kortt2002]. These associations are well established, however mechanisms of disease are less clear. It is likely that a change in the composition of proteins circulating in the blood plays a role in obesity-related cardiovascular risk[@Goudswaard2021]. The previous results chapter (Chapter \@ref(BMI-protein-MR)) examined the effect of BMI on the plasma proteome and provided estimates for the average change in proteins per average difference in BMI in a general population, using observational estimates and one sample Mendelian randomization (MR). There was evidence of a BMI effect on proteins such as leptin, sex hormone binding globulin (SHBG), fatty acid binding protein 4 (FABP4) and fumarylacetoacetase. Within an enrichment analysis, this change in circulating levels of these proteins was implicated in CVDs. There is also evidence that obesity affects platelet function, thereby elevating the risk of thrombotic events. There is evidence from the literature and from Chapter \@ref(chemokine-platelets) that circulating proteins could mediate this risk.
 
-Although MR helps to overcome issues inherent to observational studies such as confounding and reverse causation, MR has its own limitations. For example, it is possible that genetic variants used for the genetic risk score could affect protein levels through routes other than changes in BMI. This is known as horizonal pleiotropy[@Davies2018]. As well as this, although there were over 2700 particpants within the MR, this is a relatively small sample size for the study design. Additionally, it is important to not only look at which proteins are altered within the population with higher BMI; identifying which proteins can be modulated with weight loss is important as this may help reveal mechanistic insight into mechanisms of obesity-related cardiovascular disease. Triangulation can therefore be used in efforts to further determine the BMI effects on the plasma proteome. Triangulation is defined as strengthening causal inference through the combination of study designs which each have separate sources of bias[@Lawlor2016]. Therefore, to add an independent source of evidence to the MR in the previous chapter, the Diabetes REmission Clinical Trial (DiRECT) can be utilised. The DiRECT trial consisted of a group of patients with overweight/obesity and T2D who were either given guideline T2D care or an acute intervention, consisting of a low calorie diet, to help with weight loss and T2D remission[@Lean2018]. This chapter therefore aims to: examine the effect of reducing BMI with caloric restriction on the plasma proteome.
+Although MR helps to overcome issues inherent to observational studies such as confounding and reverse causation, MR has its own limitations. For example, it is possible that genetic variants used for the genetic risk score could affect protein levels through routes other than changes in BMI. This is known as horizonal pleiotropy[@Davies2018]. As well as this, although there were over 2700 particpants within the MR, this is a relatively small sample size for the study design. Additionally, it is important to not only look at which proteins are altered within the population with higher BMI; identifying which proteins can be modulated with weight loss is important as this may help reveal mechanistic insight into mechanisms of obesity-related CVD. Triangulation can therefore be used in efforts to further determine the BMI effects on the plasma proteome. Triangulation is defined as strengthening causal inference through the combination of study designs which each have separate sources of bias[@Lawlor2016]. Therefore, to add an independent source of evidence to the MR in the previous chapter, the Diabetes REmission Clinical Trial (DiRECT) can be utilised. The DiRECT trial consisted of a group of patients with overweight/obesity and T2D who were either given guideline T2D care or an acute intervention, consisting of a low calorie diet, to help with weight loss and T2D remission[@Lean2018]. This chapter therefore aims to: examine the effect of reducing BMI with caloric restriction on the plasma proteome.
 
 (ref:caption-BMI-protein-graphic2) **Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT). This chapter explores the effect of caloric restriction-induced weight loss on the plasma proteome.** Figure made using BioRender.com.
 (ref:scaption-BMI-protein-graphic2) Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT)
@@ -173,7 +173,7 @@ include_graphics(path = "figure/DiRECT/Comparison_TSLS_lmer.pdf", dpi = NA)
 
 
 ### Enrichment analysis
-To explore disease class enrichment, DAVID Bionformatics 6.8 was used[@Huang2009]. As there was consistent evidence for a BMI effect on 144 proteins across both models in DiRECT, these were compared to the full 4601 protein panel. There was strongest evidence for enrichment in proteins involved in metabolic disease (1.4 fold enrichment, p=4.21x10^-3^), with evidence for enrichment of renal disease (1.8 fold enrichment, p=1.02x10^-2^). Cardiovascular disease had weak evidence for enrichment, but this association did not pass multiple testing correction. 
+To explore disease class enrichment, DAVID Bionformatics 6.8 was used[@Huang2009]. As there was consistent evidence for a BMI effect on 144 proteins across both models in DiRECT, these were compared to the full 4601 protein panel. There was strongest evidence for enrichment in proteins involved in metabolic disease (1.4 fold enrichment, p=4.21x10^-3^), with evidence for enrichment of renal disease (1.8 fold enrichment, p=1.02x10^-2^). CVD had weak evidence for enrichment, but this association did not pass multiple testing correction. 
 
 (ref:caption-DAVID-enrichment-DiRECT) **DiRECT protein enrichment results for disease class using DAVID bioinformatics 6.8 [@Huang2009]**
 ```{r DAVID-enrichment-DiRECT,  echo=FALSE}
@@ -256,7 +256,7 @@ This study also provides some novel proteins associated with a reduction in BMI 
 
 The effect of BMI on specific platelet-related proteins was explored by extracting the estimates for proteins involved in platelet GO pathways. Both analyses indicated that a reduction in BMI reduces the levels of collagen type III. Collagen activates platelets by binding to receptors such as the GPVI receptor, therefore this reduction may reduce platelet activation[@Maurice2006]. The instrumental variable analysis detected an effect of BMI change on PAFAH. Here, a reduction in BMI led to higher levels of PAFAH. This platelet protein was detected in Chapter \@ref(BMI-protein-MR). PAFAH is protein which has been shown to bind to lipoproteins, thereby reducing their oxidation[@Noto2003]. The comparison across studies will be discussed further in Chapter \@ref(Comparison-proteome). The chemokines utilised in Chapter \@ref(chemokine-platelets), MDC and TARC, were included in the SomaLogic panel, therefore were also specifically looked up within the results. The evidence suggested that a reduction in BMI did not alter levels of MDC and TARC, however it is also possible that the sample size was limited to detect smaller magnitudes of effects.
 
-The enrichment results comparing the 144 proteins which were altered with BMI change to the full 4601 proteins tested confirmed this as there was strongest evidence for enrichment of proteins involved in metabolic disease and renal disease, however the effect on cardiovascular disease did not pass multiple testing adjustment. Pathway enrichment using StringDB also suggested that proteins most altered with BMI change were involved in cytokine-cytokine receptor interactions and complement and coagulation cascades, rather that platelet activation. It could be that the effect on inflammation and coagulation may be more immediate effects, and that changes in platelet activation may either require a more sustained weight loss, or a further reduction in BMI to see effects.
+The enrichment results comparing the 144 proteins which were altered with BMI change to the full 4601 proteins tested confirmed this as there was strongest evidence for enrichment of proteins involved in metabolic disease and renal disease, however the effect on CVD did not pass multiple testing adjustment. Pathway enrichment using StringDB also suggested that proteins most altered with BMI change were involved in cytokine-cytokine receptor interactions and complement and coagulation cascades, rather that platelet activation. It could be that the effect on inflammation and coagulation may be more immediate effects, and that changes in platelet activation may either require a more sustained weight loss, or a further reduction in BMI to see effects.
 
 Limitations from the current analysis therefore include possible protein effects that are not caused by a change in BMI. Despite the use of the treatment group as an instrument in a two stage least squares analysis, the treatment group was also associated with an alteration in other factors: those who were allocated TDR also were taken off any T2D medication and were more likely to achieve remission of T2D. It is possible that the analysis is therefore picking up protein effects that are caused by a change in medication or T2D remission, rather than as a result in loss of fat. Participants would have also lost muscle mass throughout the intervention[@Santanasto2011], therefore it is not certain that effects are attributable to loss of fat. Despite this, there is evidence that in a group of participants with obesity, the majority of weight lost is fat mass[@Backx2016]. Thirdly, BMI decreased by an average of 0.4kg/m^2^ in the control group and by 3.6 kg/m^2^. As participants started at a mean BMI of 34-35 kg/m^2^, the majority of participants will still have obesity even after the intervention. This may limit protein effects observed, as a certain BMI may need to be reached to see an alteration in protein levels (i.e. the relationship may not be linear). Finally, it is unclear how generalisable results would be to the wider population. It is often the case with diets and caloric restriction that they only result in weight loss short-term and this is likely because the body adapts to the lower intake of calories. Therefore the changes which are seen in levels of proteins may not be so dynamic. The use of bariatric surgery may help to ensure weight loss and the associated changes are sustained.
 
