--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -35,7 +35,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 This chapter will provide general information about the PhD. This includes details regarding collaborations, publications, conference presentations and awards and prizes. 
 
 ## Collaborations 
-This PhD project is part of the 4 year British Heart Foundation Integrative Cardiovascular Science Programme and is funded by the University of Bristol alumni. My PhD project has made full use of interdisciplinary techniques to answer the research questions. In 2019 I spent seven weeks at the Wellcome Sanger Institute near Cambridge, where I joined the human genetics team led by Professor Nicole Soranzo and worked closely with other academics including Professor Adam Butterworth from the University of Cambridge. I have created and implemented a clinical study where I wrote the approved ethics application. This study was in collaboration with Dr Dimitri Pournaras, a bariatric surgeon at Southmead Hopsital. In light of the COVID-19 pandemic, I utilised the laboratory techniques developed to determine the effects of severe COVID-19 on platelet function by working with clinicians including Dr David Arnold and Dr Fergus Hamilton. Other collaborations include Assistant Professor Michael Holmes from the University of Oxford and Professor Naveed Sattar from the University of Glasgow. This work will continue as part of the British Heart Foundation Accelerator Award Transition Fellowship, where I have started a collaboration with Professor Karsten Suhre from Weill-Cornell Medicine, Qatar.
+This PhD project is part of the 4 year British Heart Foundation Integrative Cardiovascular Science Programme and is funded by the University of Bristol alumni. My PhD project has made full use of interdisciplinary techniques to answer the research questions. In 2019 I spent seven weeks at the Wellcome Sanger Institute near Cambridge, where I joined the human genetics team led by Professor Nicole Soranzo and worked closely with other academics including Professor Adam Butterworth from the University of Cambridge. I have created and implemented a clinical study where I wrote the approved ethics application. This study was in collaboration with Dr Dimitri Pournaras, a bariatric surgeon at Southmead Hopsital. In light of the COVID-19 pandemic, I utilised the laboratory techniques developed to determine the effects of severe COVID-19 on platelet function by working with clinicians including Dr David Arnold and Dr Fergus Hamilton. Other collaborations include Assistant Professor Michael Holmes from the University of Oxford and Professor Naveed Sattar from the University of Glasgow using data from the DiRECT trial. This work will continue as part of the British Heart Foundation Accelerator Award Transition Fellowship, where I have started a collaboration with Professor Karsten Suhre from Weill-Cornell Medicine, Qatar.
 
 ## Publications
 
@@ -51,7 +51,7 @@ Sledz, K. M., Moore, S. F., Vijayaragavan, V., Mallah, S., **Goudswaard, L. J.**
 
 ## Publications in preparation
 
-**Goudswaard L. J.**, Williams C. M., Khalil J., Hamilton F., Arnold D., Milne A., Lewis P. A., Heesom K. K., Mundell S. J., Davidson A., Poole A. W., Hers I. Altered platelet proteome and impaired platelet integrin α~IIb~β~3~ activation in hospitalised patients with COVID-19. 
+**Goudswaard L. J.**, Williams C. M., Khalil J., Burley K. L., Hamilton F., Arnold D., Milne A., Lewis P. A., Heesom K. K., Mundell S. J., Davidson A., Poole A. W., Hers I. Altered platelet proteome and impaired platelet integrin α~IIb~β~3~ activation in hospitalised patients with COVID-19. 
 
 Constantinescu A. E., Bull C. J., **Goudswaard L. J.**, Zheng J., Elsworth B., Timpson N. J., Moore S. F., Hers I., Vincent E. E. Phenome-wide analysis to investigate deep vein thrombosis aetiology.
 
