--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -33,9 +33,9 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 
 ## Background
 
-The two previous results chapters (Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT)) aimed to determine the effect of adiposity on circulating proteins by using two different study designs: an MR study which evaluated the effect that prolonged high BMI has on protein levels and an RCT which explored the effect of weight loss through caloric restriction on the plasma proteome. These two studies provided two separate line of evidence for a causal role of adiposity in circulating protein composition. Both studies also provided evidence that the change in circulating proteins may be contributing to the increased risk of disease such as metabolic disease or cardiovascular disease. There was also separate lines of evidence for an effect of BMI on certain proteins which may be important in platelet pathways. 
+The two previous results chapters (Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT)) aimed to determine the effect of adiposity on circulating proteins by using two different study designs: an MR study which evaluated the effect that prolonged high BMI has on protein levels and an RCT which explored the effect of weight loss through caloric restriction on the plasma proteome. These two studies provided two separate line of evidence for a causal role of adiposity in circulating protein composition. Both studies also provided evidence that the change in circulating proteins may be contributing to the increased risk of disease such as metabolic disease or CVD. There was also separate lines of evidence for an effect of BMI on certain proteins which may be important in platelet pathways. 
 
-This overall shift in proteins provides important information. One of the benefits of having the same proteomics platform in both studies is that there is a large overlap in the number of proteins measured. Each approach has its own biases and limitations and both the concordance and divergence in effects across studies provides insight into possible mechanisms. The overall aim of this chapter is to compare BMI-protein effects across MR and RCT study designs and evaluate implications for platelet function and cardiovascular disease.
+This overall shift in proteins provides important information. One of the benefits of having the same proteomics platform in both studies is that there is a large overlap in the number of proteins measured. Each approach has its own biases and limitations and both the concordance and divergence in effects across studies provides insight into possible mechanisms. The overall aim of this chapter is to compare BMI-protein effects across MR and RCT study designs and evaluate implications for platelet function and CVD.
 
 ## Methods
 In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in Chapter \@ref(BMI-protein-RCT) was performed. There were 2803 unique proteins (by UniProt ID) which were detected in both INTERVAL and DiRECT. Estimates across the two cohorts were compared using linear regression. To be able to compare whether estimates were similar across study designs, estimates from each analysis were scaled using the scale() function from the "base" R package. Estimates were categorised as: similar if the scaled estimates were within 1 SD of each other; different if estimates were more than 1 SD apart and extreme if within 1 SD of each other and with an absolute scaled estimate of more than 1 SD.
@@ -44,7 +44,7 @@ Estimates for the specific platelet proteins highlighted in Chapters \@ref(BMI-p
 
 ## Results
 ### Comparison of BMI effects across DiRECT and INTERVAL
-BMI-protein estimates from this DiRECT were compared with effect estimates from INTERVAL (Chapter \@ref(BMI-protein-MR)), where 2803 proteins were detected across both studies. Both cohorts, through use of different study designs, provided evidence for an effect of BMI on the plasma proteome. Figure \@ref(fig:DiRECT-INTERVAL) shows the BMI-protein estimates for the proteins which were included in both DiRECT and INTERVAL (R^2^=0.11, P=1.0x10^77^).  There was consistent evidence across both studies that higher BMI leads to higher levels of various proteins including fumarylacetoacetase (FAAA), alcohol dehydrogenase 4 (ADH4), growth hormone receptor (GHR) and carboxypeptidase M (CBPM). Furthermore, higher BMI had a lowering effect on levels of sex hormone binding globulin (SHBG), as well as insulin-like growth factor binding protein 1/2 (IGFBP1/2). Although some of these estimates did not pass multiple testing in INTERVAL, the concordance in estimates in terms of effect size and direction of effect suggests that this is an issue of power.
+BMI-protein estimates from this DiRECT were compared with effect estimates from INTERVAL (Chapter \@ref(BMI-protein-MR)), where 2803 proteins were detected across both studies. Both cohorts, through use of different study designs, provided evidence for an effect of BMI on the plasma proteome. Figure \@ref(fig:DiRECT-INTERVAL) shows the BMI-protein estimates for the proteins which were included in both DiRECT and INTERVAL (R^2^=0.11, P=1.0x10^77^). The proteins were either deemed as similar, different or extreme (similar with large estimate) based on the comparison of scaled estimates. There was evidence that 1665 proteins had a similar effect across studies, 968 were different and 170 were extreme. There was consistent evidence across both studies that higher BMI leads to higher levels of various proteins including fumarylacetoacetase (FAAA), alcohol dehydrogenase 4 (ADH4), growth hormone receptor (GHR) and carboxypeptidase M (CBPM). Furthermore, higher BMI had a lowering effect on levels of sex hormone binding globulin (SHBG), as well as insulin-like growth factor binding protein 1/2 (IGFBP1/2). Although some of these estimates did not pass multiple testing in INTERVAL, the concordance in estimates in terms of effect size and direction of effect suggests that this is an issue of power.
 
 \blandscape
 (ref:scaption-DiRECT-INTERVAL) Scatter plot comparing the two stage least squares estimate for the effect of BMI change on protein change in DiRECT with the Mendelian randomisation estimate for the effect of BMI on protein levels in INTERVAL
@@ -65,20 +65,20 @@ include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison_groups.png", d
 ```
 \elandscape
 
-Across both INTERVAL and DiRECT, 170 unique platelet proteins were detected. The estimates for these proteins are shown in Figure \@ref(fig:DiRECT-INTERVAL-platelet). Overall, the estimates were associated with each other (R^2^=0.19, p=1.1x10^-9^), however there were divergences in estimates for some proteins. Despite this, there were consistencies for some proteins. PAFAH was associated with BMI in the observational analysis in INTERVAL. However, PAFAH did not pass multiple testing in the MR analysis. Despite this, the estimate was similar in magnitude to the observational estimate. PAFAH was also associated with BMI change in DiRECT in the instrumental variable analysis (Figure \@ref(DiRECT-INTERVAL-platelet)). The direction of the effect indicated that higher BMI is associated with reduction in circulating PAFAH. In agreement with this, a reduction in BMI lead to levels of PAFAH increasing. The estimates for PAFAH were similar and can be seen in Figure \@ref(fig:DiRECT-INTERVAL-platelet). Consistencies in the estimates across the two study designs for other proteins, such as for complement factor B, suggest other effects that may be mediated by BMI that could affect platelet function.
+Across both INTERVAL and DiRECT, 170 unique platelet proteins were detected. The comparison of estimates for these proteins is shown in Figure \@ref(fig:DiRECT-INTERVAL-platelet), with categorisation of whether the estimates were different, the same or extreme based on the distribution of the 170 scaled estimates from both study designs. Overall, the estimates were associated with each other (R^2^=0.19, p=1.1x10^-9^), which was a stronger association than that seen for all proteins in Figure \@ref(fig:DiRECT-INTERVAL-group). However, there were divergences in estimates for some proteins. Thirteen proteins were categorised as extreme (similar with large estimates), with 102 categorised as the same and 55 as different. Proteins which had consistent evidence across study designs, with the greatest magnitude of estimates include PAFAH, PAI-1 and Complement Factor B. PAFAH was associated with BMI in the observational analysis in INTERVAL. However, PAFAH did not pass multiple testing in the MR analysis. Despite this, the estimate was similar in magnitude to the observational estimate. PAFAH was also associated with BMI change in DiRECT in the instrumental variable analysis. The direction of the effect indicated that higher BMI is associated with a reduction in circulating PAFAH. In agreement with this, a reduction in BMI lead to higher levels of PAFAH. The estimates for PAFAH were similar in Figure \@ref(fig:DiRECT-INTERVAL-platelet). The consistencies in magnitude and direction of estimates for the platelet proteins highlighted in green, in particular PAFAH, PAI-1 and complement factor B suggest that platelet proteome alterations due to variation in BMI likely has downstream effects on the platelet environment.
 
 (ref:scaption-DiRECT-INTERVAL-platelet) Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL and the for the effect of BMI on proteins involved in platelet pathways
 (ref:caption-DiRECT-INTERVAL-platelet) **Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL and the for the effect of BMI on proteins involved in platelet pathways**.
 ```{r DiRECT-INTERVAL-platelet, echo = FALSE, out.width="75%", fig.cap="(ref:caption-DiRECT-INTERVAL-platelet)", fig.align = "center", fig.scap= "(ref:scaption-DiRECT-INTERVAL-platelet)"}
-include_graphics(path = "figure/DiRECT/Comparison_scatter_platelet_proteins.pdf", dpi = NA)
+include_graphics(path = "figure/DiRECT/Comparison_scatter_platelet_proteins_coloured.pdf", dpi = NA)
 ```
 
 ## Discussion
 This chapter brought together results from two different analyses to determine effects of adiposity on the plasma proteome (INTERVAL in Chapter \@ref(BMI-protein-MR) and DiRECT in Chapter \@ref(BMI-protein-RCT)). Comparisons of protein effects across the different study designs points towards proteins of interest which may be involved in the development or progression of obesity-associated cardiometabolic disease. This chapter also collated the results for the proteins which have been implicated in pathways relevant to platelets. 
 
-The comparison of results from Chapter \@ref(BMI-protein-MR), which used MR and observational associations to assess the effect of average higher BMI across a population on average protein levels, with results from an RCT in Chapter \@ref(BMI-protein-RCT) provides two separate lines of evidence to suggest a causal role of BMI in levels of various proteins. The analysis in INTERVAL suggested that proteins most altered by BMI were enriched for diseases such as cardiovascular disease and metabolic disease. As the estimates for the effect of BMI on proteins were consistent across both DiRECT and INTERVAL, this suggests that weight loss is able to reverse the protein changes observed with higher BMI, thereby potentially reducing disease risk. Although previous studies have identified BMI effects on some of these proteins, this direct comparison of effect estimates across an MR study design and weight loss intervention for the general proteome has not yet been done in this manner. This is a key strength of the study. The RCT had fewer participants than INTERVAL (265 vs 2737), but had enough power to detect an effect of BMI change on over 100 proteins. Proteins identified which would benefit following up, based on consistencies across study designs, include SHBG, IGFBP1/2, and GHR. The comparison has also highlighted some more novel proteins such as FAAA and PAFAH, which require further study.
+The comparison of results from Chapter \@ref(BMI-protein-MR), which used MR and observational associations to assess the effect of average higher BMI across a population on average protein levels, with results from an RCT in Chapter \@ref(BMI-protein-RCT) provides two separate lines of evidence to suggest a causal role of BMI in levels of various proteins. The analysis in INTERVAL suggested that proteins most altered by BMI were enriched for diseases such as CVD and metabolic disease. As the estimates for the effect of BMI on proteins were consistent across both DiRECT and INTERVAL, this suggests that weight loss is able to reverse the protein changes observed with higher BMI, thereby potentially reducing disease risk. Although previous studies have identified BMI effects on some of these proteins, this direct comparison of effect estimates across an MR study design and weight loss intervention for the general proteome has not yet been done in this manner. This is a key strength of the study. The RCT had fewer participants than INTERVAL (265 vs 2737), but had enough power to detect an effect of BMI change on over 100 proteins. Proteins identified which would benefit following up, based on consistencies across study designs, include SHBG, IGFBP1/2, and GHR. The comparison has also highlighted some more novel proteins such as FAAA and PAFAH, which require further study.
 
-Overall, estimates for the effect of BMI on platelet proteins in DiRECT and INTERVAL displayed a positive association. The agreement in effect estimates across study designs for the platelet protein PAFAH suggests that higher BMI does affect levels of this protein and that it is likely the power issue which means it cannot be detected in the MR. The power analysis in the discussion of Chapter \@ref(BMI-protein-MR) supports this as it was calculated that an effect size of ±0.33 SDs would be required to have a power of 80%. This protein has been suggested to be antiatherogenic, therefore lower levels would be proatherogenic[@Noto2003]. There is also evidence in mice that knocking out PAFAH increases the weight of male mice, therefore indicating that PAFAH could be important in weight regulation[@Nakamura2021]. A reverse MR analysis using SNPs associated with higher levels of PAFAH could help determine whether there is a likely causal role for PAFAH in weight regulation in humans. Validating this protein in an independent cohort and investigating this protein further in the lab could help reveal the functional implications of changes in PAFAH. This protein provides a good example of how triangulating can help tease apart the protein effects which are more likely to be driven by BMI.
+Overall, estimates for the effect of BMI on platelet proteins in DiRECT and INTERVAL displayed a positive association. The agreement in effect estimates across study designs for the platelet protein PAFAH suggests that higher BMI does affect levels of this protein and that it is likely the power issue which means it cannot be detected in the MR. The power analysis in the discussion of Chapter \@ref(BMI-protein-MR) supports this as it was calculated that an effect size of ±0.33 SDs would be required to have a power of 80%. This protein has been suggested to be antiatherogenic, therefore lower levels would be proatherogenic[@Noto2003]. There is also evidence in mice that knocking out PAFAH increases the weight of male mice, therefore indicating that PAFAH could be important in weight regulation[@Nakamura2021]. A reverse MR analysis using SNPs associated with higher levels of PAFAH could help determine whether there is a likely causal role for PAFAH in weight regulation in humans. Validating this protein in an independent cohort and investigating this protein further in the lab could help reveal the functional implications of changes in PAFAH. This protein provides a good example of how triangulating can help tease apart the protein effects which are more likely to be driven by BMI. There were 12 other platelet proteins where there was evidence for consistency across both studies, including PAI-1 and Complement Factor B. These proteins would benefit from being followed up by examining in cardiovascular cohorts or by performing platelet function studies on isolated platelets.
 
 Divergence in estimates across study designs may also suggest that there are spurious relationships occurring. However, this divergence may also provide some insight into the biology due to the nature of each study design. In general, the MR study design provides insight into the effect on the proteome that a sustained high BMI has over the life course and is therefore indicative of chronic effects. In contrast, the estimates in DiRECT are the effect that acute weight loss (1 year) has on the proteome. Complement factors may be altered in the MR study, but not after a weight loss intervention because weight loss may not have been sustained long enough to induce changes at the proteome level. There was no evidence for a causal relationship between BMI and both SCAR5 and CHAD in the MR, but these proteins displayed strong associations with weight loss in DiRECT. This could be because these protein changes are signals of starvation or due to other changes that happen with caloric restriction, such as a change of medication or loss of muscle mass. This requires further exploration, and requires more formal analysis to disentangle effects.
 
