--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -32,7 +32,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Discussion {#Discussion}
 
 ## Summary of findings
-The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related cardiovascular disease (Figure \@ref(fig:Thesis-schematic-chaps)). The results and limitations from each individual results chapter have been discussed in the relevant chapters. This discussion chapter will recap the main findings from the thesis, address the overall strengths and limitations, discuss the wider clinical implications of findings as well as suggest future research to expand on this area of research.
+The work presented in this thesis brought together an interdisciplinary approach to expand on previous literature to further explore the contribution of platelet function and the plasma proteome to obesity-related CVD (Figure \@ref(fig:Thesis-schematic-chaps)). The results and limitations from each individual results chapter have been discussed in the relevant chapters. This discussion chapter will recap the main findings from the thesis, address the overall strengths and limitations, discuss the wider clinical implications of findings as well as suggest future research to expand on this area of research.
 
 (ref:caption-Thesis-schematic-chaps) **Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored.** Figure made using BioRender.com.
 (ref:scaption-Thesis-schematic-chaps) Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored
@@ -40,7 +40,7 @@ The work presented in this thesis brought together an interdisciplinary approach
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
 ```
 
-A summary of the main findings of the thesis is provided in Table \@ref(tab:main-thesis-findings). This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the platelet proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related cardiovascular disease such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on plasma proteins involved in platelet proteins also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
+A summary of the main findings of the thesis is provided in Table \@ref(tab:main-thesis-findings). This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the platelet proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related CVD such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on plasma proteins involved in platelet proteins also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
 
 (ref:caption-main-thesis-findings) Summary of main findings from the thesis
 ```{r main-thesis-findings,  echo=FALSE, warning=FALSE}
@@ -67,10 +67,10 @@ Although efforts were made to examine all of the associations within the pathway
 
 As mentioned in Chapter \@ref(BMI-platelets-clinic), a major limitation is the lack of longitudinal data for the bariatric surgery and platelet function study. Before the COVID-19 pandemic, the experimental plan was to have bariatric patients with BMI > 40 kg/m^2^ and controls followed up at four time points. These time points were: baseline (2-3 weeks before surgery), after the very low energy diet (VLED) that precedes bariatric surgery (day of surgery), 6 weeks post-surgery and 12 months post-surgery. This would have allowed exploration of the change in an individual's platelet function with weight loss. Previous studies have researched the effect of obesity and bariatric surgery on platelet function[@Barrachina2019; @Dobrydneva2012], but platelet function at four timepoints surrounding bariatric surgery has not yet been explored, more specifically before and after the VLED. This study aimed to add in a time point at 12 months, which is where there is evidence for maximal weight loss[@Maciejewski2016]. Therefore this study would have been one of the most in depth platelet function studies for bariatric surgery. Although now not achievable within this PhD project, this study will be able to be taken forward by the Hers lab.
 
-Another limitation of the thesis is that there was no stratification by sex in analyses and lab experiments. Where possible, analyses were adjusted for sex and therefore should help to reduce the confounding effect from this variable, however there may be a need to explore whether there are any sex specific effects. It is possible that BMI has different effects on the plasma proteome in males and females. Previous studies have identified sex differences in inflammatory protein changes in individuals with and without metabolic syndrome, for example adiponectin[@TerHorst2020]. A difference in platelet reactivity between males and females has also been reported, where aggregation in response to a range of platelet agonists was is greater in females[@Becker2006]. Similarly, it has been observed within the Hers lab that females may have platelets which are more susceptible to the priming effects by chemokines and other priming molecules. Future analyses would benefit from stratifying analyses by sex to further investigate any sex-specific effects, however larger sample sizes would be required.
+Another limitation of the thesis is that there was no stratification by sex in analyses and lab experiments. Where possible, analyses were adjusted for sex and therefore should help to reduce the confounding effect from this variable, however there may be a need to explore whether there are any sex specific effects. It has been shown that there may be a difference in the effect of adiposity on circulating metabolites when comparing males and females, with higher BMI having a larger effect on LDL-C in males[@OKeeffe2022]. It is likely that BMI may have different effects on the plasma proteome in males and females, especially as there are proteins in the panel which have known involvement in sex hormone regulation such as SHBG. Previous studies have identified sex differences in inflammatory protein changes in individuals with and without metabolic syndrome, for example adiponectin[@TerHorst2020]. A difference in platelet reactivity between males and females has also been reported, where aggregation in response to a range of platelet agonists was is greater in females[@Becker2006]. Similarly, it has been observed within the Hers lab that females may have platelets which are more susceptible to the priming effects by chemokines and other priming molecules. Future analyses would benefit from stratifying analyses by sex to further investigate any sex-specific effects, however larger sample sizes would be required.
 
 ## Wider implications of findings
-The research within this thesis has contributed to the understanding of mechanisms of obesity-related cardiovascular disease. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC.  Similarly, more detailed blood counts from newer haematology analyzers also do not provide IPC within the summary, however it can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to antiplatelet treatment[@Bernlochner2015a].
+The research within this thesis has contributed to the understanding of mechanisms of obesity-related CVD. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC.  Similarly, more detailed blood counts from newer haematology analyzers also do not provide IPC within the summary, however it can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to antiplatelet treatment[@Bernlochner2015a].
 
 As well as IPC having the potential to be a useful biomarker, various plasma proteins could also be biomarkers for patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter \@ref(BMI-protein-MR) have been implicated in disease. For example, in work by Constantinescu et al., analyses suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC (Reference Andrei's paper). Proteins such as INHBC could therefore be therapeutic targets. These proteins could also be potential biomarkers. 
  
@@ -94,5 +94,5 @@ The analyses in Chapter \@ref(BMI-protein-RCT) utilised an RCT implementing calo
 
 ## Overall conclusion
 
-Overall, this thesis has brought together a range of techniques to investigate the contribution of platelet function and the plasma proteome as possible mechanisms of obesity-related cardiovascular disease. There was evidence for a causal relationship between body mass index and IPC: the clinical utility of IPC as a biomarker of platelet reactivity needs to be further characterised. In order to explore potential mechanisms of effects, two chemokines were shown to modulate platelet function, thereby indicated the circulating proteome can affect platelet function. Subsequent analyses demonstrated a broad effect of BMI on plasma proteins, which were enriched for cardiovascular disease possibly exerts downstream effects on platelet function. Larger studies with platelet function data are required to further examine these relationships.
+Overall, this thesis has brought together a range of techniques to investigate the contribution of platelet function and the plasma proteome as possible mechanisms of obesity-related CVD. There was evidence for a causal relationship between body mass index and IPC: the clinical utility of IPC as a biomarker of platelet reactivity needs to be further characterised. In order to explore potential mechanisms of effects, two chemokines were shown to modulate platelet function, thereby indicated the circulating proteome can affect platelet function. Subsequent analyses demonstrated a broad effect of BMI on plasma proteins, which were enriched for CVD and possibly exert downstream effects on platelet function. Larger studies with platelet function data are required to further examine these relationships.
 
